--- a/index.html
+++ b/index.html
@@ -4,19 +4,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" href="./style.css">
   <title>Tienda online</title>
 </head>
 <body>
   <header>
-    <h1>Lista de productos</h1>
+    <nav class="navbar bg-body-tertiary">
+      <div class="container">
+        <a class="navbar-brand mb-0 h1" href="#">Lista de productos</a>
+      </div>
+    </nav>
   </header>
   <main>
     <div class="container">
-      <section class="categories">
+      <section class="categories d-flex gap-2 mb-3">
 
       </section>
-      <section class="products">
+      <section class="products row row-cols-3 g-2">
 
       </section>
     </div>
